crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__complex__parse_coprocess.snap
---
source: cash-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "coproc cat",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Coprocess(CoprocessCommand(
                body: Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cat",
                    loc: "[location]",
                  )),
                )),
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
