crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__complex__parse_glob_patterns.snap
---
source: cash-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls *.txt **/foo.* file?.txt",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "*.txt",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "**/foo.*",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "file?.txt",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
